--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,17 @@ footer {
     height: 80px;
 }
 
+
 div div.casella {
     border: 2px solid purple;
     text-align: center;
     width: 50px;
     height: 50px;
     background-color: red;
+}
+
+div div.casella.bgAlternativo {
+    background-color: yellowgreen;
 }
 
 .custom-align-center {
@@ -29,10 +34,11 @@ div div.casella {
 }
 
 #gameArea {
-    height: 500px;
-    width: 500px;
+    /* height: 500px;
+    width: 500px; */
 }
 
-div div.casella.bgAlternativo {
-    background-color: yellowgreen;
+#gameAreaContainer {
+    margin: 0 auto;
+    width: 550px;
 }
