working exercise of mined camp game(without suggestions on proximity quantity of mines)

--- a/css/style.css
+++ b/css/style.css
@@ -18,11 +18,15 @@ div div.casella {
     text-align: center;
     width: 50px;
     height: 50px;
-    background-color: red;
+    background-color: grey;
 }
 
 div div.casella.bgAlternativo {
     background-color: yellowgreen;
+}
+
+div div.casella.bomb {
+    background-color: red;
 }
 
 .custom-align-center {
