--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,6 @@ footer {
 div div.casella {
     border: 2px solid purple;
     text-align: center;
-    width: 50px;
-    height: 50px;
     background-color: grey;
 }
 
@@ -38,6 +36,10 @@ div div.casella.bomb {
 }
 
 #gameContainer {
+    display: flex;
+    align-items: center;
     margin: 0 auto;
-    width: 550px;
+    width: 500px;
+    height: 500px;
+    padding: 0;
 }
